# Quack

./: .gitignore  CMakeLists.txt  README.md  deployment.sh
cmake/imgui/: CMakeLists.txt
cmake/imguizmo/: CMakeLists.txt
docs/uml/: graphics.puml
editor/: CMakeLists.txt
editor/include/quack-editor/: application.h  camera.h  scene_editor.h
editor/include/quack-editor/layers/: layer_components.h  layer_hierarchy_panel.h  layer_quad.h  layer_triangle.h
editor/src/: application.cpp  camera.cpp  main.cpp
editor/src/layers/: layer_components.cpp  layer_hierarchy_panel.cpp  layer_quad.cpp  layer_triangle.cpp
engine/: CMakeLists.txt
engine/assets/shaders/: basic.glsl  cube.glsl  grid.glsl  model.glsl  quad.glsl  quad_camera.glsl
engine/docs/uml/: graphics.puml
engine/include/obs/: gpu_buffer.h  gpu_buffer_description.h  gpu_buffer_opengl.h  gpu_buffer_utility.h  gpu_pipeline_state.h  gpu_pipeline_state_description.h  gpu_resource.h  gpu_shader_description.h  gpu_shader_program.h  gpu_texture_description.h
engine/include/quack/: application.h  application_description.h  event.h  event_type.h  gpu_buffer.h  gpu_buffer_opengl.h  gpu_context.h  gpu_device.h  gpu_shader.h  gpu_shader_program_stage.h  key_event.h  layer.h  layer_imgui.h  layer_stack.h  mouse_code.h  mouse_event.h  quack.h  window.h  window_description.h  window_event.h  window_glfw.h
engine/include/quack/core/: application.h  application_description.h  application_event.h  asset_library.h  event.h  event_type.h  key_code.h  key_event.h  layer_stack.h  mouse_event.h  timestep.h  window.h  window_description.h  window_event.h
engine/include/quack/graphics/: gpu_adapter.h  gpu_buffer.h  gpu_command_buffer.h  gpu_context.h  gpu_device.h  gpu_framebuffer.h  gpu_pipeline.h  gpu_render_pass.h  gpu_resource.h  gpu_shader.h  gpu_shader_description.h  gpu_shader_program.h  gpu_shader_program_description.h  gpu_shader_uniform.h  gpu_swap_chain.h  gpu_texture.h  gpu_texture_description.h  gpu_uniform_buffer.h  gpu_vertex_array.h
engine/include/quack/math/: math.h
engine/include/quack/platform/glfw/: window_glfw.h
engine/include/quack/platform/imgui/: layer_imgui.h
engine/include/quack/platform/opengl/: gpu_buffer_opengl.h  gpu_context_opengl.h  gpu_device_opengl.h  gpu_framebuffer_opengl.h  gpu_shader_opengl.h  gpu_shader_program_opengl.h  gpu_shader_uniform_opengl.h  gpu_texture_opengl.h  gpu_vertex_array_opengl.h
engine/include/quack/platform/vulkan/: gpu_adapter_vulkan.h  gpu_command_buffer_vulkan.h  gpu_context_vulkan.h  gpu_device_vulkan.h  gpu_framebuffer_vulkan.h  gpu_pipeline_vulkan.h  gpu_render_pass_vulkan.h  gpu_shader_program_vulkan.h  gpu_swap_chain_vulkan.h
engine/include/quack/render/: camera.h  camera_perspective.h  entity.h  light.h  material.h  mesh.h  ortographic_camera.h  renderer.h  scene_camera.h
engine/include/quack/scene/: components.h  entity.h  mesh.h  model.h  scene.h  scene_serializer.h
engine/src/: application.cpp  application_description.cpp  gpu_buffer.cpp  gpu_context.cpp  layer_imgui.cpp  window.cpp  window_description.cpp  window_glfw.cpp
engine/src/core/: application.cpp  application_description.cpp  asset_library.cpp  key_event.cpp  mouse_event.cpp  window.cpp  window_description.cpp
engine/src/graphics/: gpu_adapter.cpp  gpu_buffer.cpp  gpu_context.cpp  gpu_device.cpp  gpu_shader_program.cpp  gpu_shader_uniform.cpp  gpu_swap_chain.cpp
engine/src/platform/glfw/: window_glfw.cpp
engine/src/platform/imgui/: layer_imgui.cpp
engine/src/platform/opengl/: gpu_buffer_opengl.cpp  gpu_context_opengl.cpp  gpu_device_opengl.cpp  gpu_framebuffer_opengl.cpp  gpu_shader_opengl.cpp  gpu_shader_program_opengl.cpp  gpu_shader_uniform_opengl.cpp  gpu_texture_opengl.cpp  gpu_vertex_array_opengl.cpp
engine/src/platform/vulkan/: draft  gpu_adapter_vulkan.cpp  gpu_command_buffer_vulkan.cpp  gpu_context_vulkan.cpp  gpu_device_vulkan.cpp  gpu_framebuffer_vulkan.cpp  gpu_pipeline_vulkan.cpp  gpu_render_pass_vulkan.cpp  gpu_shader_program_vulkan.cpp  gpu_swap_chain_vulkan.cpp
engine/src/render/: #ortographic_camera.cpp#  camera_perspective.cpp  light.cpp  ortographic_camera.cpp  renderer.cpp
engine/src/scene/: model.cpp  scene.cpp  scene_serializer.cpp
model_loader/: CMakeLists.txt
model_loader/include/quack-model-loader/layers/: layer_test.h
model_loader/src/: main.cpp
model_loader/src/layers/: layer_test.cpp
src/: main.cpp
src/core/: application.hpp  window.hpp  window_description.hpp
src/graphics/: gpu_adapter.hpp  gpu_buffer.hpp  gpu_buffer_description.hpp  gpu_buffer_utility.hpp  gpu_context.hpp  gpu_device.h  gpu_device.hpp  gpu_pipeline_state.h  gpu_pipeline_state.hpp  gpu_pixel_format.hpp  gpu_resource.h  gpu_resource.hpp  gpu_resource_usage.hpp  gpu_shader.h  gpu_shader_description.h  gpu_shader_program.h  gpu_shader_program_description.h  gpu_texture.hpp
src/platform/opengl/: gpu_buffer_opengl.h  gpu_buffer_opengl.hpp
vulkan_debugger/: CMakeLists.txt
vulkan_debugger/src/: main.cpp
vulkan_demo/: CMakeLists.txt
vulkan_demo/src/: main.cpp
